stop lightbeam button text from overflowing

--- a/less/angular/pages/private-eye.less
+++ b/less/angular/pages/private-eye.less
@@ -1,4 +1,8 @@
 .cta-footer {
   padding-bottom: 6rem;
+}
 
+#lightbeam-link {
+  /* For small screens where "Install Firefox Lightbeam" makes the button too large */
+  overflow: hidden;
 }
